// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block node that spans multiple lines 1`] = `
Array [
  Object {
    "body": "Hello world",
    "head": Object {
      "args": undefined,
      "end": 6,
      "line": 1,
      "name": "a",
      "start": 0,
      "type": "#",
    },
    "parent": null,
    "tail": Object {
      "args": undefined,
      "end": 27,
      "line": 3,
      "name": "a",
      "start": 21,
      "type": "/",
    },
  },
]
`;

exports[`block node with a block inside 1`] = `
Array [
  Object {
    "body": " {{#b}} {{/b}} ",
    "head": Object {
      "args": undefined,
      "end": 6,
      "line": 1,
      "name": "a",
      "start": 0,
      "type": "#",
    },
    "parent": null,
    "tail": Object {
      "args": undefined,
      "end": 27,
      "line": 1,
      "name": "a",
      "start": 21,
      "type": "/",
    },
  },
]
`;

exports[`block node with a head and tail that span multiple lines 1`] = `
Array [
  Object {
    "body": "      Hello world",
    "head": Object {
      "args": undefined,
      "end": 39,
      "line": 3,
      "name": "a",
      "start": 17,
      "type": "#",
    },
    "parent": null,
    "tail": Object {
      "args": undefined,
      "end": 88,
      "line": 7,
      "name": "a",
      "start": 66,
      "type": "/",
    },
  },
]
`;

exports[`block node with a variable inside 1`] = `
Array [
  Object {
    "body": " {{b}} ",
    "head": Object {
      "args": undefined,
      "end": 6,
      "line": 1,
      "name": "a",
      "start": 0,
      "type": "#",
    },
    "parent": null,
    "tail": Object {
      "args": undefined,
      "end": 19,
      "line": 1,
      "name": "a",
      "start": 13,
      "type": "/",
    },
  },
]
`;

exports[`block node without a body 1`] = `
Array [
  Object {
    "body": "",
    "head": Object {
      "args": undefined,
      "end": 6,
      "line": 1,
      "name": "a",
      "start": 0,
      "type": "#",
    },
    "parent": null,
    "tail": Object {
      "args": undefined,
      "end": 12,
      "line": 1,
      "name": "a",
      "start": 6,
      "type": "/",
    },
  },
]
`;

exports[`empty node 1`] = `"Invalid variable name \\"\\" on line 1"`;

exports[`function call with creative spacing 1`] = `
Array [
  Object {
    "args": Array [
      "1",
      "2",
      "3",
      "4",
      "5",
    ],
    "end": 25,
    "line": 1,
    "name": "fn",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`function call with many arguments 1`] = `
Array [
  Object {
    "args": Array [
      "z0",
      "z1",
      "z2",
      "z3",
      "z4",
      "z5",
      "z6",
      "z7",
      "z8",
      "z9",
    ],
    "end": 47,
    "line": 1,
    "name": "fn",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`function call with no argument spacing 1`] = `
Array [
  Object {
    "args": Array [
      "1",
      "2",
      "a",
      "b",
      "null",
    ],
    "end": 19,
    "line": 1,
    "name": "fn",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`function call with one argument 1`] = `
Array [
  Object {
    "args": Array [
      "z",
    ],
    "end": 10,
    "line": 1,
    "name": "fn",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`function call with primitive arguments 1`] = `
Array [
  Object {
    "args": Array [
      "0",
      "-0.5",
      "1",
      "true",
      "false",
      "null",
    ],
    "end": 38,
    "line": 1,
    "name": "fn",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`line breaks 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 9,
    "line": 3,
    "name": "a",
    "start": 4,
    "type": undefined,
  },
  Object {
    "args": undefined,
    "end": 17,
    "line": 5,
    "name": "b",
    "start": 12,
    "type": undefined,
  },
]
`;

exports[`parent block closed before child 1`] = `"Unexpected closing node on line 1"`;

exports[`unclosed block 1`] = `"Unclosed block on line 1"`;

exports[`unclosed node 1`] = `"Unclosed node on line 1"`;

exports[`unclosed node 2`] = `"Unclosed node on line 1"`;

exports[`unclosed node 3`] = `"Unclosed node on line 1"`;

exports[`variable names can use dot-notation 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 13,
    "line": 1,
    "name": "a.b.c.d",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`variable names cannot be a number 1`] = `"Invalid variable name \\"12345\\" on line 1"`;

exports[`variable names cannot be a number 2`] = `"Invalid variable name \\"12.34\\" on line 1"`;

exports[`variable names cannot contain dashes 1`] = `"Invalid variable name \\"a--b-c\\" on line 1"`;

exports[`variable names cannot start with a number 1`] = `"Invalid variable name \\"0z\\" on line 1"`;

exports[`variable names cannot use bracket-notation (yet?) 1`] = `"Invalid variable name \\"a[b[c]][d]\\" on line 1"`;

exports[`variable names follow Javascript rules exactly 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 28,
    "line": 1,
    "name": "__aAoOzZ_$0123456789$$",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`variable node that spans multiple lines 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 38,
    "line": 3,
    "name": "a",
    "start": 17,
    "type": undefined,
  },
]
`;

exports[`variable node with common padding 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 5,
    "line": 1,
    "name": "a",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`variable node with common padding 2`] = `
Array [
  Object {
    "args": undefined,
    "end": 7,
    "line": 1,
    "name": "a",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`variable node with creative padding 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 6,
    "line": 1,
    "name": "a",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`variable node with creative padding 2`] = `
Array [
  Object {
    "args": undefined,
    "end": 11,
    "line": 1,
    "name": "a",
    "start": 0,
    "type": undefined,
  },
]
`;

exports[`variable node with spacing around 1`] = `
Array [
  Object {
    "args": undefined,
    "end": 8,
    "line": 1,
    "name": "a",
    "start": 2,
    "type": undefined,
  },
]
`;
